fixed some card layout and separated the overview into a separate section

--- a/overview.html
+++ b/overview.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ben Harrison | Engineering Portfolio</title>
+  <title>Overview | Ben Harrison | Engineering Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,27 +22,28 @@
   </nav>
 </header>
 
-<section class="hero">
+<section class="overview">
+  <h2>OVERVIEW</h2>
 
-  <div class="hero-content">
+  <div class="overview-grid">
 
-    <div class="hero-text">
-      <h1>BEN<br>HARRISON</h1>
+    <a href="about.html" class="card blue">
+      <h3>WHO AM I</h3>
+      <p>Get to know me and my vision!</p>
+    </a>
 
-      <div class="hero-buttons">
-        <a href="about.html" class="btn">WHO AM I</a>
-        <a href="overview.html" class="btn">OVERVIEW</a>
-      </div>
-    </div>
+    <a href="projects.html" class="card blue">
+      <h3>PROJECTS</h3>
+      <p>Some of the cool work I've done recently.</p>
+    </a>
 
-    <div class="hero-image">
-      <img src="assets/images/profile-picture.png" alt="Profile Photo">
-    </div>
+    <a href="resume.html" class="card blue">
+      <h3>RESUME</h3>
+      <p>For hiring managers!</p>
+    </a>
 
   </div>
-
 </section>
-
 
 <footer>
   <p>© 2026 Ben Harrison</p>
