--- a/projects.html
+++ b/projects.html
@@ -23,17 +23,17 @@
   <div class="project-grid">
 
     <a href="projects-university.html" class="project-card">
-      <img src="assets/images/toaster-overview.png" alt="University">
+      <img src="assets/images/university-card.png" alt="University">
       <h3>UNIVERSITY</h3>
     </a>
 
     <a href="projects-work.html" class="project-card">
-      <img src="assets/images/toaster-overview.png" alt="Work">
+      <img src="assets/images/work-card.png" alt="Work">
       <h3>WORK</h3>
     </a>
 
     <a href="projects-personal.html" class="project-card">
-      <img src="assets/images/toaster-overview.png" alt="Personal">
+      <img src="assets/images/personal-card.png" alt="Personal">
       <h3>PERSONAL</h3>
     </a>
 
