fixed some style and added bengineerings box to overview

--- a/overview.html
+++ b/overview.html
@@ -3,51 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overview | Ben Harrison | Engineering Portfolio</title>
+  <title>Overview | Ben Harrison</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<header>
-  <p class="small-title">ENGINEERING PORTFOLIO</p>
+  <!-- HEADER -->
+  <header>
+    <h1 class="page-title">OVERVIEW</h1>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">Who Am I</a>
-    <a href="overview.html">Overview</a>
-    <a href="projects.html">Projects</a>
-    <a href="resume.html">Resume</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="overview.html">Overview</a>
+      <a href="about.html">Who Am I</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<section class="overview">
-  <h2>OVERVIEW</h2>
 
-  <div class="overview-grid">
+  <!-- OVERVIEW SECTION -->
+  <section class="overview-section">
 
-    <a href="about.html" class="card blue">
-      <h3>WHO AM I</h3>
-      <p>Get to know me and my vision!</p>
-    </a>
+    <div class="overview-grid">
 
-    <a href="projects.html" class="card blue">
-      <h3>PROJECTS</h3>
-      <p>Some of the cool work I've done recently.</p>
-    </a>
+      <!-- WHO AM I -->
+      <a href="about.html" class="overview-box">
+        <h3>WHO AM I</h3>
+        <p>Get to know me and my vision!</p>
+      </a>
 
-    <a href="resume.html" class="card blue">
-      <h3>RESUME</h3>
-      <p>For hiring managers!</p>
-    </a>
+      <!-- PROJECTS -->
+      <a href="projects.html" class="overview-box">
+        <h3>PROJECTS</h3>
+        <p>Some of the cool work I’ve done recently.</p>
+      </a>
 
-  </div>
-</section>
+      <!-- RESUME -->
+      <a href="resume.html" class="overview-box">
+        <h3>RESUME</h3>
+        <p>For hiring managers!</p>
+      </a>
 
-<footer>
-  <p>© 2026 Ben Harrison</p>
-</footer>
+    </div>
+
+
+    <!-- BENGINEERINGS BRAND BOX -->
+    <div class="branding-box">
+      <h2>BENGINEERINGS</h2>
+    </div>
+
+  </section>
 
 </body>
 </html>
