added in a bunch of engineering pages and stuff

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,20 @@
 
 <body>
 
-<header>
-  <h1>CONTACT ME</h1>
-</header>
+<!-- HEADER -->
+  <header>
+    <h1 class="page-title">CONTACT ME</h1>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="overview.html">Overview</a>
+      <a href="about.html">Who Am I</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
 
 <section class="contact">
 
@@ -21,9 +32,8 @@
     <input type="text" placeholder="Phone Number">
 
     <select>
-      <option>Interested in...</option>
-      <option>Internship</option>
       <option>Collaboration</option>
+      <option>Job Opportunity</option>
       <option>Other</option>
     </select>
 
