--- a/about.html
+++ b/about.html
@@ -8,15 +8,20 @@
 
 <body>
 
-<header>
-  <h1>WHO AM I</h1>
+<!-- HEADER -->
+  <header>
+    <h1 class="page-title">WHO AM I</h1>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="overview.html">Overview</a>
+      <a href="about.html">Who Am I</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
 
 <section class="about">
 
