making the purchasable phones page responsive (for phone use)

--- a/purchasable-phones.html
+++ b/purchasable-phones.html
@@ -51,7 +51,7 @@
 
         <input type="text" placeholder="What you'd like to write on the side" name="side_text">
 
-        <button type="submit" class="btn">Confirm my order</button>
+        <button type="submit" class="btn">CONFIRM</button>
       </form>
     </div>
   </div>
