lots of changes to the main home page
responsive too (test out on phone )

--- a/bengineerings.html
+++ b/bengineerings.html
@@ -9,27 +9,17 @@
 
 <body>
 
+
 <!-- HEADER -->
-  <header>
-
-    <nav>
-      <a href="index.html">HOME</a>
-      <a href="overview.html">OVERVIEW</a>
-      <a href="bengineerings.html">BENGINEERINGS</a>
-      <a href="contact.html">CONTACT</a>
-    </nav>
-  </header>
-
-
-<section class="bengineerings-hero">
-
-  <div class="bengineerings-content">
-    <div class="bengineerings-title">
-      <img src="assets/logos/logo-bengineerings.png" alt="Bengineerings Logo" class="bengineerings-logo">
-    </div>
-  </div>
-
-</section>
+<header>
+  <h1 class="page-title">BENGINEERINGS</h1>
+  <nav>
+    <a href="home.html">HOME</a>
+    <a href="overview.html">OVERVIEW</a>
+    <a href="bengineerings.html">BENGINEERINGS</a>
+    <a href="contact.html">CONTACT</a>
+  </nav>
+</header>
 
 <section class="bengineerings-cards">
 
@@ -52,6 +42,9 @@
 </section>
 
 <footer>
+  <div style="margin: 40px 0 0 0; text-align: center;">
+    <img src="assets/logos/logo-bengineerings.png" alt="Bengineerings Logo" style="max-width: 120px; height: auto; display: block; margin: 0 auto 16px auto;">
+  </div>
   <p>© 2026 Ben Harrison</p>
 </footer>
 
