--- a/purchasable.html
+++ b/purchasable.html
@@ -13,7 +13,7 @@
   <header>
     <h1 class="page-title" style="text-align:center;">PURCHASABLE GOODS</h1>
     <nav>
-      <a href="index.html">HOME</a>
+      <a href="home.html">HOME</a>
       <a href="purchasable.html">PURCHASABLE GOODS</a>
       <a href="bengineerings.html">BENGINEERINGS</a>
       <a href="contact.html">CONTACT</a>
