--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <h1 class="page-title">WHO AM I</h1>
 
     <nav>
-      <a href="index.html">HOME</a>
+      <a href="home.html">HOME</a>
       <a href="overview.html">OVERVIEW</a>
       <a href="bengineerings.html">BENGINEERINGS</a>
       <a href="contact.html">CONTACT</a>
