--- a/overview.html
+++ b/overview.html
@@ -14,7 +14,7 @@
     <h1 class="page-title">OVERVIEW</h1>
 
     <nav>
-      <a href="index.html">HOME</a>
+      <a href="home.html">HOME</a>
       <a href="overview.html">OVERVIEW</a>
       <a href="bengineerings.html">BENGINEERINGS</a>
       <a href="contact.html">CONTACT</a>
