--- a/purchasable-keychains.html
+++ b/purchasable-keychains.html
@@ -13,7 +13,7 @@
     <h1 class="page-title" style="line-height:1.1;text-align:center;">CUSTOMISED<br>KEY CHAINS</h1>
 
     <nav>
-      <a href="index.html">HOME</a>
+      <a href="home.html">HOME</a>
       <a href="purchasable.html">PURCHASABLE GOODS</a>
       <a href="bengineerings.html">BENGINEERINGS</a>
       <a href="contact.html">CONTACT</a>
