--- a/purchasable-valentines.html
+++ b/purchasable-valentines.html
@@ -13,7 +13,7 @@
     <h1 class="page-title">VALENTINES GIFTS</h1>
 
     <nav>
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="purchasable.html">Purchasable Goods</a>
       <a href="purchasable-keychains.html">Key Chains</a>
       <a href="bengineerings.html">Bengineerings</a>
