--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@ window.addEventListener('DOMContentLoaded', function() {
 <section id="projects" class="projects-section">
   <div class="section-animate">
     <h2 class="section-title">PROJECTS</h2>
-    <div class="projects-flex">
+    <div class="projects-thumb">
       <a href="university.html" class="project-item project-link">
         <img src="assets/projects/toaster.png" alt="University Project" style="background:transparent;">
         <div class="project-label">UNIVERSITY</div>
       </a>
-      <div class="project-divider"></div>
+      <div class="project-thumb"></div>
       <a href="work.html" class="project-item project-link">
         <img src="assets/projects/work-setup.png" alt="Work Project" style="background:transparent;">
         <div class="project-label">WORK</div>
       </a>
-      <div class="project-divider"></div>
+      <div class="project-thumb"></div>
       <a href="personal.html" class="project-item project-link">
         <img src="assets/projects/watch.png" alt="Personal Project" style="background:transparent;">
         <div class="project-label">PERSONAL</div>
