--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@ window.addEventListener('DOMContentLoaded', function() {
 <section class="contact">
 
   <div class="section-animate">
-    <form class="contact-form">
+        <form class="inquiry-form" action="https://formspree.io/f/mqedpgob" method="POST">
       <input type="text" placeholder="Full Name" required>
       <input type="email" placeholder="Email Address" required>
       <input type="text" placeholder="Phone Number">
