--- a/purchasable-phones.html
+++ b/purchasable-phones.html
@@ -117,7 +117,7 @@ window.addEventListener('DOMContentLoaded', function() {
   <div class="create-final">
     <h2>NOW PUT IT ALL TOGETHER.</h2>
     <div class="final-form-wrapper">
-      <form class="inquiry-form final-form" action="https://formspree.io/f/xyzpqrst" method="POST">
+      <form class="inquiry-form final-form" action="https://formspree.io/f/xbdagpjo" method="POST">
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Phone Number" name="phone">
         <input type="text" placeholder="Phone Model" name="phone_model" required>
