--- a/university.html
+++ b/university.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>University Projects | Ben Harrison</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: #111;
-      color: #fff;
+      background: #fffef2;
+      color: #111;
       overflow-x: hidden;
     }
     .video-section {
@@ -21,24 +22,62 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #111;
+      background: #fffef2;
       position: relative;
       overflow: hidden;
+      border: none !important;
+      outline: none !important;
+      box-shadow: none !important;
+    }
+    .uni-video {
+      /* ...existing styles... */
+      border: none !important;
+      outline: none !important;
+      box-shadow: none !important;
     }
     .uni-video {
       width: 100vw;
       height: 100vh;
-      min-width: 100vw;
-      min-height: 100vh;
       object-fit: cover;
+      object-position: center center;
       display: block;
-      background: #111;
+      background: transparent;
       border: none;
       margin: 0;
       padding: 0;
       opacity: 0;
       transform: translateY(40px) scale(0.98);
       transition: opacity 0.7s cubic-bezier(.68,-0.55,.27,1.55), transform 0.7s cubic-bezier(.68,-0.55,.27,1.55);
+    }
+    /* Only apply contain to videos 2-9 on desktop */
+    .video-section:not(:first-of-type) .uni-video {
+      object-fit: contain;
+    }
+    @media (max-width: 900px) {
+      .video-section:not(:first-of-type) .uni-video {
+        width: 100vw !important;
+        height: auto !important;
+        min-height: 100vh !important;
+        object-fit: cover !important;
+        object-position: center center !important;
+        background: #fffef2 !important;
+        display: block;
+      }
+      .video-section:not(:first-of-type) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    @media (max-width: 900px) {
+      .uni-video {
+        object-position: center center;
+      }
     }
     .uni-video.active {
       opacity: 1;
@@ -47,9 +86,31 @@
   </style>
 </head>
 <body>
+  <!-- HEADER -->
+  <header>
+    <h1 class="page-title" style="text-align:center;">UNIVERSITY</h1>
+    <nav>
+      <a href="index.html">HOME</a>
+      <a href="overview.html">OVERVIEW</a>
+      <a href="bengineerings.html">BENGINEERINGS</a>
+      <a href="contact.html">CONTACT</a>
+    </nav>
+  </header>
   <main>
-    <div class="video-section">
-      <video class="uni-video" src="videos/university/1.mp4" autoplay loop muted playsinline></video>
+    <div class="video-section" style="display: flex; align-items: center; justify-content: center; gap: 2vw;">
+      <div style="flex:1; display:flex; justify-content:flex-end;">
+        <div style="color:#004aad; font-weight: 900; font-family: 'Inter', Arial, sans-serif; font-size:3.6vw; text-align:right; line-height:1.1; letter-spacing:-1px;">
+          FINAL<br>YEAR<br>STUDENT
+        </div>
+      </div>
+      <div style="flex:1; display:flex; justify-content:center; align-items:center;">
+        <video class="uni-video" src="videos/university/watch-rework.mp4" autoplay loop muted playsinline style="width:28vw; height:80vh; border-radius:0; box-shadow:0 4px 32px #0002; background:transparent;"></video>
+      </div>
+      <div style="flex:1; display:flex; justify-content:flex-start;">
+        <div style="color:#004aad; font-weight: 900; font-family: 'Inter', Arial, sans-serif; font-size:3.6vw; text-align:left; line-height:1.1; letter-spacing:-1px;">
+          MECHANICAL<br><br>AND<br><br>MECHATRONICS<br><br><span style="font-size:2.5vw; color:#004aad; font-weight:900; font-family:'Inter',Arial,sans-serif;">75+ WAM</span>
+        </div>
+      </div>
     </div>
     <div class="video-section">
       <video class="uni-video" src="videos/university/2.mp4" autoplay loop muted playsinline></video>
